Complete app build, code and docs deployed; no planned changes
# Motivation
Finished the requested build-and-deploy cycle: started the build, implemented the application code, and documented the app specifications. The deployment completed and the app is live. This commit records that delivery and leaves the visual tweaks open for follow-up per the conversation.

# Changes
No changes planned (spec.md: "No changes planned.").

Co-authored-by: Caffeine <forge@caffeine.ai>

--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,25 +1,21 @@
 {
   "schemaVersion": "1.0.0",
-  "projectStateVersion": 27,
+  "projectStateVersion": 29,
   "summary": "Single-page marketing website for Gal Fashion World (ladies handbags manufacturer/exporter to UK & Europe) using provided company details and messaging.",
   "architectural_notes": [
     "Website copy and contact details should reflect Gal Fashion World (address, phone/WhatsApp, email) and highlight UK/EU export + 10+ years experience.",
     "Replace previously requested phrase “beautiful ladies with beautiful bags” with: “Behind every successful/beautiful woman is a fabulous handbag”.",
     "Update visual theme to convert lilac accents to red across the site.",
-    "Hero section should support an embedded video that auto-plays silently (muted).",
     "Update displayed company address: change \"7-B/1\" to \"B-1\" wherever the address appears on the site.",
     "All visible text across the site should use italic styling (global typography update).",
     "Proceed with publishing/deploying the current website build.",
     "User approved proceeding to make the deployed site fully public/live; begin production/public publish workflow.",
     "Production/public deployment should use the user-provided domain/slug: \"galfashionworld-2014\".",
-    "Hero video area should be shorter/smaller than current layout; keep only one video in the Hero and move bag photos to another section/area."
+    "Remove all videos from the site (no Hero embedded video / autoplay video; eliminate video elements/sections).",
+    "Set global font family to Times New Roman with italic styling across the site; set font size to 20 for the text \"Premium Ladies Handbag Manufacturer\"."
   ],
-  "known_issues": [
-    "Draft/review build is missing the Hero embedded video (autoplay muted loop) that should display per requirements; user reports no video visible in the draft.",
-    "Live site: Hero embedded video is not functioning/playing (user report)."
-  ],
+  "known_issues": [],
   "isFixRequest": false,
-  "imageRequirements": "## Required Images\n- Handbag made of cotton canvas, studio product photo style (material-cotton-canvas-bag.dim_1200x1200.png)\n- Handbag made of cotton towel fabric, studio product photo style (material-cotton-towel-bag.dim_1200x1200.png)\n- Handbag made of jacquard fabric, studio product photo style (material-jacquard-bag.dim_1200x1200.png)\n- Handbag made of paper raffia, woven texture, studio product photo style (material-paper-raffia-bag.dim_1200x1200.png)\n- Handbag made of jute, natural fiber texture, studio product photo style (material-jute-bag.dim_1200x1200.png)\n- Handbag with beadwork and embroidery details, studio product photo style (material-beads-embroidery-bag.dim_1200x1200.png)",
   "existing_features": [
     {
       "id": "feature-build-a-responsive-single-page-website-frontend-with-the-following-sections-and-anchor-navigation-header-site-name-nav-links-hero-headline-short-tagline-primary-cta-button-about-short-paragraph-features-3-6-feature-cards-contact-simple-contact-form-ui-with-name-email-message-fields-and-a-submit-button-and-footer-copyright-links-use-english-for-all-visible-text-using-sensible-placeholder-copy-that-can-be-replaced-later",
@@ -212,6 +208,46 @@
         "REQ-25"
       ],
       "version": 1
+    },
+    {
+      "id": "feature-remove-all-videos-from-the-website-ui-including-replacing-the-hero-section-video-element-with-a-static-img-so-no-video-is-loaded-displayed-or-played-anywhere-in-the-frontend",
+      "title": "Remove all videos from the website UI, including replacing the Hero section <video> element with a static <img> so no video is loaded, displayed, or played anywhere in the frontend.",
+      "reqIds": [
+        "REQ-26"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-update-global-typography-so-all-visible-text-across-the-site-uses-the-font-family-times-new-roman-fallback-to-times-and-then-generic-serif-and-remains-italic-by-default",
+      "title": "Update global typography so all visible text across the site uses the font family \"Times New Roman\" (fallback to \"Times\" and then generic serif) and remains italic by default.",
+      "reqIds": [
+        "REQ-27"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-set-the-font-size-to-20px-for-the-displayed-phrase-premium-ladies-handbag-manufacturer-in-the-hero-section-the-heading-text-containing-premium-ladies-and-handbag-manufacturer",
+      "title": "Set the font size to 20px for the displayed phrase \"Premium Ladies Handbag Manufacturer\" in the Hero section (the heading text containing \"Premium Ladies\" and \"Handbag Manufacturer\").",
+      "reqIds": [
+        "REQ-28"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-in-the-materials-craftsmanship-showcase-baggallery-remove-the-existing-jacquard-material-card-image-and-replace-it-with-the-user-uploaded-white-towel-bag-photo-and-display-the-label-text-exactly-as-towel-bag-below-on-the-photo-where-the-material-name-appears",
+      "title": "In the Materials & Craftsmanship showcase (BagGallery), remove the existing Jacquard material card/image and replace it with the user-uploaded white towel bag photo, and display the label text exactly as \"Towel bag\" below/on the photo where the material name appears.",
+      "reqIds": [
+        "REQ-29"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-in-the-materials-craftsmanship-showcase-baggallery-remove-the-existing-beads-embroidery-material-card-image-and-replace-it-with-the-user-uploaded-beaded-bag-photo-and-display-the-label-text-exactly-as-beaded-clutch-below-on-the-photo-where-the-material-name-appears",
+      "title": "In the Materials & Craftsmanship showcase (BagGallery), remove the existing \"Beads / Embroidery\" material card/image and replace it with the user-uploaded beaded bag photo, and display the label text exactly as \"Beaded Clutch\" below/on the photo where the material name appears.",
+      "reqIds": [
+        "REQ-30"
+      ],
+      "version": 1
     }
   ],
   "new_feature_requests": [
@@ -234,14 +270,6 @@
       "status": "pending"
     },
     {
-      "id": "AR-4",
-      "summary": "Add a small MP4 video clip asset showing a model with a handbag to the frontend static assets and ensure it plays on the front page (Hero section) using the existing video element source path \"/assets/hero-handbag-model-video.mp4\" with autoplay, muted audio, loop, and inline playback, while keeping the existing fallback poster image behavior.",
-      "reqIds": [
-        "REQ-12"
-      ],
-      "status": "pending"
-    },
-    {
       "id": "AR-5",
       "summary": "Update global typography so all visible text across the site renders in italic.",
       "reqIds": [],
@@ -260,20 +288,26 @@
       "status": "in_progress"
     },
     {
-      "id": "AR-8",
-      "summary": "Fix Hero embedded video so it functions/plays correctly on the live site (autoplay muted, loop, inline).",
-      "reqIds": [],
-      "status": "pending"
-    },
-    {
-      "id": "AR-9",
-      "summary": "Adjust Hero section layout: make the video area shorter/smaller, and place additional bag photos elsewhere on the page (non-hero area).",
-      "reqIds": [],
-      "status": "pending"
-    },
-    {
       "id": "AR-10",
       "summary": "Add front-page content/section showcasing bags made of cotton canvas, cotton towel, jacquard, paper raffia, jute, and beads/embroidery.",
+      "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-11",
+      "summary": "Remove all videos from the website (including Hero embedded video/video sections).",
+      "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-12",
+      "summary": "Update typography to Times New Roman Italic for all visible text; set font size 20 for the text \"Premium Ladies Handbag Manufacturer\".",
+      "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-13",
+      "summary": "Update materials/bag photos: remove Jacquard bag photo and replace with attached white towel bag photo labeled \"Towel bag\"; replace beads/embroidery photo with attached beaded bag photo labeled \"Beaded Clutch\".",
       "reqIds": [],
       "status": "pending"
     }
